--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -6,7 +6,7 @@
 html,
 body {
   color: value($color-basic, darkest);
-  font-family: 'OpenSans';
+  font-family: 'Montserrat', sans-serif;
   font-size: calc($default-font-size * 0.65);
   height: 100%;
   width: 100%;
