--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,12 @@
 /*** Not Inject ***/
 @import './variables';
 
+/* Vendor */
+@import './vendor/normalize';
+
+/* Components */
+@import './components/button';
+
 /* Import Base */
 @import './base/global';
 @import './base/states';
