--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -1,10 +1,14 @@
-@define-mixin button ##background, ##foreground {
+@define-mixin button ##background, ##foreground, ##hover {
   background-color: ##background;
   border-radius: 100px;
   box-shadow: rgba(##background, 0.2) 0 -25px 18px -14px inset, rgba(##background, 0.15) 0 1px 2px,
     rgba(##background, 0.15) 0 2px 4px, rgba(##background, 0.15) 0 4px 8px, rgba(##background, 0.15) 0 8px 16px,
     rgba(##background, 0.15) 0 16px 32px;
   color: ##foreground;
+
+  &:hover {
+    background-color: ##hover;
+  }
 
   @mixin-content;
 }
@@ -20,28 +24,34 @@
   border: 0;
   user-select: none;
   touch-action: manipulation;
+  transition: all value($time, normal);
 
   &--primary {
-    @mixin button value($color-primary, normal), value($color-primary, semidarker);
+    @mixin button value($color-primary, normal), value($color-primary, semidarker), value($color-primary, bright);
   }
 
   &--primary-dark {
-    @mixin button value($color-primary, dark), color-mod(value($color-primary, dark) blackness(70%));
+    @mixin button value($color-primary, dark), color-mod(value($color-primary, dark) blackness(70%)),
+      color-mod(value($color-primary, dark) lightness(60%));
   }
 
   &--primary-darker {
-    @mixin button value($color-primary, darker), color-mod(value($color-primary, darker) lightness(80%));
+    @mixin button value($color-primary, darker), color-mod(value($color-primary, darker) lightness(80%)),
+      color-mod(value($color-primary, darker) lightness(40%));
   }
 
   &--primary-darkest {
-    @mixin button value($color-primary, darkest), color-mod(value($color-primary, darkest) lightness(80%));
+    @mixin button value($color-primary, darkest), color-mod(value($color-primary, darkest) lightness(80%)),
+      color-mod(value($color-primary, darkest) lightness(60%));
   }
 
   &--primary-bright {
-    @mixin button value($color-primary, bright), color-mod(value($color-primary, normal) blackness(70%));
+    @mixin button value($color-primary, bright), color-mod(value($color-primary, normal) blackness(70%)),
+      color-mod(value($color-primary, normal) blackness(60%));
   }
 
   &--primary-brighter {
-    @mixin button value($color-primary, brighter), color-mod(value($color-primary, normal) blackness(50%));
+    @mixin button value($color-primary, brighter), color-mod(value($color-primary, normal) blackness(50%)),
+      color-mod(value($color-primary, normal) blackness(60%));
   }
 }
