--- a/src/styles/base/global.css
+++ b/src/styles/base/global.css
@@ -5,9 +5,9 @@
 
 html,
 body {
-  background-color: value($color-primary, darkest);
-  color: value($color-basic, brightest);
-  font-family: 'Montserrat', sans-serif;
+  background-color: value($color-basic, brighter);
+  color: value($color-basic, darkest);
+  font-family: 'Montserrat', 'Segoe UI', sans-serif;
   font-size: calc($default-font-size * 0.65);
   height: 100%;
   width: 100%;
