--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -44,9 +44,6 @@ $font-size: (
   xl: 1.5rem
 );
 
-$font-family: 'Noto Sans', 'Segoe UI', sans-serif;
-$font-title: 'IBM Plex Sans', serif;
-
 $media: (
   xxs: 360px,
   xs: 640px,
@@ -64,3 +61,7 @@ $z: (
   xl: 50,
   xxl: 100
 );
+
+$font-family: 'Noto Sans', 'Segoe UI', sans-serif;
+$font-title: 'IBM Plex Sans', serif;
+$technology-size: 3rem;
