--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -37,7 +37,7 @@ $font-weight: (
 );
 
 $font-size: (
-  xs: 0.5rem,
+  xs: 0.65rem,
   s: 0.85rem,
   m: 1rem,
   l: 1.25rem,
@@ -50,7 +50,8 @@ $media: (
   s: 768px,
   m: 1024px,
   l: 1280px,
-  xl: 1440px
+  xl: 1440px,
+  xxl: 1600px
 );
 
 $z: (
